--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-screeninfo>=0.7
-py-cpuinfo>=8.0.0
-python-dateutil>=2.8.2
-rich>=12.4.4
-pynvml>=11.4.1
-elevate>=0.1.3
+screeninfo
+py-cpuinfo
+python-dateutil
+rich
+pynvml
+elevate
